catkin_ws_modified/logs_release/saw_intuitive_research_kit/build.make.005.log.stderr
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: In member function ‘virtual void mtsIntuitiveResearchKitArm::Run()’:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:309:24: error: no matching function for call to ‘mtsIntuitiveResearchKitArm::SetJointEffort()’
         SetJointEffort();
                        ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:309:24: note: candidate is:
In file included from /home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:29:0:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/include/sawIntuitiveResearchKit/mtsIntuitiveResearchKitArm.h:119:18: note: virtual void mtsIntuitiveResearchKitArm::SetJointEffort(const prmForceTorqueJointSet&)
     virtual void SetJointEffort(const prmForceTorqueJointSet & newTorque);
                  ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/include/sawIntuitiveResearchKit/mtsIntuitiveResearchKitArm.h:119:18: note:   candidate expects 1 argument, 0 provided
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: In member function ‘virtual void mtsIntuitiveResearchKitArm::SetJointEffort(const prmForceTorqueJointSet&)’:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:881:41: error: no matching function for call to ‘prmForceTorqueJointSet::SetForceTorque(const prmForceTorqueJointSet&)’
     TorqueSetParam.SetForceTorque(effort);
                                         ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:881:41: note: candidate is:
In file included from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsMacros.h:24:0,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsGenericObject.h:36,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsForwardDeclarations.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsGenericObjectProxy.h:32,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsQueue.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsMailBox.h:29,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstMultiTask/mtsInterfaceProvided.h:31,
                 from /home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:26:
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnAccessorMacros.h:37:14: note: void prmForceTorqueJointSet::SetForceTorque(const vctDoubleVec&)
  inline void Set##memberName(const memberType & newValue) {             \
              ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnAccessorMacros.h:70:5: note: in expansion of macro ‘CMN_DECLARE_MEMBER_AND_ACCESSORS_INTERNAL’
     CMN_DECLARE_MEMBER_AND_ACCESSORS_INTERNAL(memberType, memberName)
     ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstParameterTypes/prmForceTorqueJointSet.h:51:5: note: in expansion of macro ‘CMN_DECLARE_MEMBER_AND_ACCESSORS’
     CMN_DECLARE_MEMBER_AND_ACCESSORS(vctDoubleVec, ForceTorque);
     ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnAccessorMacros.h:37:14: note:   no known conversion for argument 1 from ‘const prmForceTorqueJointSet’ to ‘const vctDoubleVec& {aka const vctDynamicVector<double>&}’
  inline void Set##memberName(const memberType & newValue) {             \
              ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnAccessorMacros.h:70:5: note: in expansion of macro ‘CMN_DECLARE_MEMBER_AND_ACCESSORS_INTERNAL’
     CMN_DECLARE_MEMBER_AND_ACCESSORS_INTERNAL(memberType, memberName)
     ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstParameterTypes/prmForceTorqueJointSet.h:51:5: note: in expansion of macro ‘CMN_DECLARE_MEMBER_AND_ACCESSORS’
     CMN_DECLARE_MEMBER_AND_ACCESSORS(vctDoubleVec, ForceTorque);
     ^
In file included from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnClassServices.h:36:0,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnGenericObject.h:169,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnSerializer.h:33,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeConstMatrixBase.h:28,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeMatrixBase.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeConstMatrixRef.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeMatrix.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstNumerical/nmrIsOrthonormal.h:32,
                 from /home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:25:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: At global scope:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:31:39: warning: ‘mtsIntuitiveResearchKitArmClassServicesPointer’ defined but not used [-Wunused-variable]
 CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG(mtsIntuitiveResearchKitArm, mtsTaskPeriodic, mtsTaskPeriodicConstructorArg);
                                       ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnClassRegisterMacros.h:265:31: note: in definition of macro ‘CMN_IMPLEMENT_SERVICES_INTERNAL’
 static cmnClassServicesBase * className##ClassServicesPointer = className::ClassServices();
                               ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:31:1: note: in expansion of macro ‘CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG’
 CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG(mtsIntuitiveResearchKitArm, mtsTaskPeriodic, mtsTaskPeriodicConstructorArg);
 ^
make[2]: *** [CMakeFiles/sawIntuitiveResearchKit.dir/code/mtsIntuitiveResearchKitArm.cpp.o] Error 1
make[1]: *** [CMakeFiles/sawIntuitiveResearchKit.dir/all] Error 2
make: *** [all] Error 2
